# rag-against-machine

./: .gitignore  Dockerfile  README.md  chunker.py  evaluator.py  main.py  models.py  pyproject.toml  requirements.txt
data/: predictions.json  queries.json
data/processed/: corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
data/processed/bm25_index/: corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  metadata.json  params.index.json  vocab.index.json
student/: .env  .gitignore  __main__.py  answer_dataset.py  evaluator.py  index.py  requirements.txt  search_dataset.py
