[project]
name = "rag-agains-machine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.3.9",
    "fire>=0.7.1",
    "numpy>=2.2.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]
